# py_distributed_processing

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
distributed_processing/: __init__.py  async_result.py  client.py  exceptions.py  filesystem_connector.py  messages.py  redis_connector.py  serializers.py  utils.py  worker.py
examples/: monte_carlo_autocall.ipynb  monte_carlo_autocall_redis_client.ipynb  monte_carlo_autocall_redis_worker.ipynb
examples/filesystem/: .env.example  fs_client.ipynb  fs_client_multi.ipynb  fs_client_multi.py  fs_client_simple.ipynb  fs_worker.ipynb  fs_worker_multi.py  fs_worker_multi_naive.py  fs_worker_simple.ipynb  test_filesystem_client_multi.ipynb  test_filesystem_client_multi.py  test_filesystem_worker.ipynb  test_filesystem_worker_multi.py
examples/monte_carlo/: mc_autocall_mapper.py  monte_carlo_autocall_redis_worker.py
examples/redis/: test_redis_worker.ipynb
tests/: Untitled-1.ipynb  Untitled-2.ipynb  conftest.py  fs_worker_multi.py  multi.py  run_tests.bat  test_async_result.py  test_client.py  test_filesystem_client_multi.ipynb  test_filesystem_client_multi.py  test_filesystem_client_multi_2.ipynb  test_filesystem_client_simple.ipynb  test_filesystem_connector.py  test_filesystem_worker_multi.py  test_filesystem_worker_multi_2.py  test_filesystem_worker_simple.ipynb  test_messages.py  test_multiprocessing.ipynb  test_public_api.py  test_redis_client.ipynb  test_redis_connector.py  test_serializers.py  test_worker.py
