[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-processing"
version = "0.0.1a"
description = "Computación distribuída sobre colas de mensajes (RPC estilo JSON-RPC 2.0 con conectores Redis y filesystem)."
readme = "README.md"
requires-python = ">=3.9"
# dill is used by the core modules (worker, client) to serialize python calls.
dependencies = ["dill"]

[project.optional-dependencies]
redis = ["redis"]
# fs_structs is a sibling project, not published on PyPI.
# Install it locally, e.g.: pip install -e ../fs_structs
fs = ["fs_structs", "watchdog"]
all = ["distributed-processing[redis,fs]"]
dev = ["pytest", "ruff"]

[tool.ruff]
target-version = "py39"
line-length = 88
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # bugbear (mutable defaults, etc.)
    "I",  # isort
    "UP", # pyupgrade
]
# Long log/docstring lines: the formatter does not split strings and
# rewrapping them all is not worth the diff noise.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: exercises a real connector (filesystem); slower than unit tests",
]
